--- a/Process_APP_Desk/Properties/Resources.resx
+++ b/Process_APP_Desk/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="272-cross" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\272-cross.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="135-search-white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\135-search-white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon minimizar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon minimizar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -162,6 +165,9 @@
   </data>
   <data name="LOGO_AZUL_BLANCO" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LOGO_AZUL_BLANCO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="189-tree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\189-tree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="115-users" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\115-users.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,7 +214,7 @@
   <data name="047-stack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\047-stack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="135-search-white" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\135-search-white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="273-checkmark-black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\273-checkmark-black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
