--- a/Process_APP_Desk/Properties/Resources.resx
+++ b/Process_APP_Desk/Properties/Resources.resx
@@ -178,6 +178,9 @@
   <data name="267-plus_White" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\267-plus_White.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="273-checkmark-black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\273-checkmark-black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon cerrar2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon cerrar2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -214,7 +217,7 @@
   <data name="047-stack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\047-stack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="273-checkmark-black" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\273-checkmark-black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="268-minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\268-minus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
