--- a/Process_APP_Desk/Properties/Resources.resx
+++ b/Process_APP_Desk/Properties/Resources.resx
@@ -193,6 +193,9 @@
   <data name="264-warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\264-warning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="268-minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\268-minus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="135-search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\135-search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -217,7 +220,7 @@
   <data name="047-stack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\047-stack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="268-minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\268-minus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="317-arrow-right2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\317-arrow-right2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
