--- a/Process_APP_Desk/Properties/Resources.resx
+++ b/Process_APP_Desk/Properties/Resources.resx
@@ -163,6 +163,9 @@
   <data name="Mobile-Menu-Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Mobile-Menu-Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="119-user-tie" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\119-user-tie.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="LOGO_AZUL_BLANCO" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LOGO_AZUL_BLANCO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -177,6 +180,9 @@
   </data>
   <data name="267-plus_White" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\267-plus_White.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="317-arrow-right2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\317-arrow-right2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="273-checkmark-black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\273-checkmark-black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -220,7 +226,7 @@
   <data name="047-stack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\047-stack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="317-arrow-right2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\317-arrow-right2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="114-user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\114-user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
